# databricks-governance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
data/: sample_events.csv
docs/: capstone-project.md
examples/: README.md
examples/access-control/: grant_revoke.py  grant_revoke.sql  permission_model.py  permission_model.sql  service_principal.py
examples/cicd/: notebook_ci.yml
examples/lineage/: query_lineage.py  query_lineage.sql
examples/ml-monitoring/: inference_monitor.py
examples/mlops/: promote_model.py  train_and_register.py
examples/monitoring/: table_monitor.py
examples/repos/: github_actions_sync.yml
examples/secrets/: secret_scope.py
examples/setup/: create_groups.py  sdk_utils.py  setup.sql  setup_catalog.py  teardown_groups.py
examples/unity/: create_catalog.py  create_catalog.sql  create_schemas.py  create_schemas.sql  create_tables.py  create_tables.sql
labs/: lab-1.md  lab-2.md  lab-3.md  lab-4.md  lab-5.md  lab-6.md
tmp/: .batuta-private.toml
